--- a/app/views/static_pages/content.html.erb
+++ b/app/views/static_pages/content.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Contact") %>
+<% provide(:title, "Content") %>
 <h1>Content</h1>
 <p>
   Contact the Ruby on Rails Tutorial about the sample app at the
