--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,23 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |form| %>
+    <%= form_for(@user, url: signup_path) do |form| %>
+      <%= render 'shared/error_messages' %>
       <%= form.label :name %>
-      <%= form.text_field :name %>
+      <%= form.text_field :name, class: 'form-control' %>
 
       <%= form.label :email %>
-      <%= form.email_field :email %>
+      <%= form.email_field :email, class: 'form-control' %>
 
       <%= form.label :password %>
-      <%= form.password_field :password %>
+      <%= form.password_field :password, class: 'form-control' %>
 
       <%= form.label :password_confirmation, "Confirmation" %>
-      <%= form.password_field :password_confirmation %>
+      <%= form.password_field :password_confirmation, class: 'form-control' %>
 
       <%= form.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+    <%= debug(@user.errors) if Rails.env.development? %>
   </div>
 </div>
